[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
isahc = "1.7.2"
netcorehost = "0.17.0"
proxy-dll = "0.2.5"
retour = { version = "0.3.1", features = ["static-detour"] }
thiserror = "1.0.64"
win-msgbox = "0.2.1"
windows = { version = "0.58.0", features = [
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_LibraryLoader",
] }
